--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.2",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.1",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5"
